add new block 'catalog' and began to make new section

--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,5 @@
 @import './components/header.css';
 @import './components/hero.css';
 @import './components/project.css';
+@import './components/catalog.css';
+@import './components/rent.css';
