--- a/css/base.css
+++ b/css/base.css
@@ -37,6 +37,37 @@ a,span{
     flex-wrap: wrap;
 }
 
+.col-7{
+    width: 58%;
+}
+
 .col-6{
     width: 50%;
+}
+
+.col-5{
+    width: 42%;
+}
+
+.col-4{
+    width: 31%;
+}
+
+.col-3{
+    width: 25%;
+}
+
+.decor__items{
+    padding: 156px 0 70px;
+    align-items: center;
+}
+
+.decor__title{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #343434;
+    padding-left: 40px;
 }
