--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,4 @@
 @import './components/project.css';
 @import './components/catalog.css';
 @import './components/rent.css';
+@import './components/news.css';
