finish to make 'news' block

--- a/css/components/rent.css
+++ b/css/components/rent.css
@@ -48,6 +48,7 @@
 .list__items::before{
     content: '';
     position: absolute;
+    background-color: #343434;
     border: 3px solid #343434;
     border-radius: 50%;
     left: -15px;
