--- a/css/components/news.css
+++ b/css/components/news.css
@@ -74,10 +74,25 @@
     color: #343434;
 }
 
+.Robe{
+    font-weight: normal;
+    font-size: 18px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #343434;
+    width: 20%;
+}
+
 .news__text{
     font-weight: 300;
     font-size: 14px;
     color: #343434;
+    padding: 20px 0;
+}
+
+.news__content{
+    position: relative;
+    padding-right: 20px;
 }
 
 .news__img{
@@ -87,8 +102,9 @@
 }
 
 .news__date{
-    right: 0;
-    bottom: 0;
+    position: absolute;
+    right: 30px;
+    bottom: 5px;
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
