--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,4 @@
 @import './components/catalog.css';
 @import './components/rent.css';
 @import './components/news.css';
+@import './components/footer.css';
