--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,4 @@
 @import './components/rent.css';
 @import './components/news.css';
 @import './components/footer.css';
+@import './components/media.css';
